objects/ServiceResourceSkill.object
<CustomObject>
    <fields>
        <fullName>Service_Resource_Name__c</fullName>
        <formula>ServiceResource.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Resource Skills</relationshipLabel>
        <relationshipName>Service_Resource_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <formula>ServiceResource.Primary_Service_Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>